Fix speech bubble triangle spacing

--- a/src/app/components/feeling/feeling.component.less
+++ b/src/app/components/feeling/feeling.component.less
@@ -65,7 +65,7 @@
     content: '';
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 30%;
     width: 0;
     height: 0;
     border: 20px solid transparent;
@@ -93,7 +93,7 @@
     content: '';
     position: absolute;
     top: 10px;
-    left: 10%;
+    left: 70%;
     width: 0;
     height: 0;
     border: 20px solid transparent;
